--- a/yes/yes2/yes3/new.html
+++ b/yes/yes2/yes3/new.html
@@ -34,7 +34,7 @@
     </div>
 
     <footer>
-      <p>HEHEHEHEHE)))</p>
+      <h1><a href="https://www.youtube.com/watch?v=mOYZaiDZ7BM" target="_blank">DON'T CLICK HERE!!!!!!!</a></h1>
     </footer>
   </body>
 </html>
